# metadata_mongo_ingester

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
MetadataMongoIngester/: MetadataMongoIngester.py
docs/: Configuration_files.md  Unit_tests.md  methods.md
metadata_mongo_ingester/: MetadataMongoIngester.py  ingester_config.cfg
src/: MetadataMongoIngester.py
tests/: test_connection.py  test_ingestion.py  test_validation.py
tests/configs/: bad_config_format.cfg  bad_config_no_index_keys.cfg  bad_config_no_mongodb_section.cfg  bad_config_no_secrets_filename.cfg  bad_config_no_secrets_section.cfg  bad_secrets_no_mongodb_section.cfg  bad_secrets_no_password.cfg  dev_secrets.cfg.bak  good_config_bad_secrets_no_mongodb_section.cfg  good_config_bad_secrets_no_password.cfg  good_config_good_secrets.cfg
tests/schemas/: bad_gt-schema_truncated.json  bad_gt-schema_wrong_data_type.json  good_gt-schema.json
tests/test_docs/: bad_gt_metadata_missing_PI.json  bad_gt_metadata_missing_archived_path.json  good_gt_metadata.json
